# c_lib

./: CMakeLists.txt  Makefile  main.c
file/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  get_next_line.c
graph/: ft_3d_to_2d.c  ft_create_line.c  ft_create_point.c  ft_create_point_3d.c  ft_create_pos.c  ft_create_rgb.c  ft_line.c  ft_perspective.c  ft_rgb_to_int.c
includes/: ft_printf.h  get_next_line.h  libft.h  mlx_buttons.h  mlx_color.h  wstr.h
is_to/: ft_is.c  ft_is_space.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_tolower.c  ft_toupper.c
lst/: ft_freestab.c  ft_lstadd.c  ft_lstddelone.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsort.c  ft_lstswap.c
mem/: ft_bzero.c  ft_getendian.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memrealoc.c  ft_memset.c  ft_memswap.c
printf/: env.c  env_dot.c  flags.c  flags2.c  ft_printf.c  print_all.c  print_char.c  print_number.c  print_str.c  print_wchar.c  print_wstr.c  tools.c
str/: ft_atoi.c  ft_itoa.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strealloc.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strjoin2.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnlen.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c
wstr/: ft_utf8chrencode.c  ft_utf8chrsize.c  ft_wchrbin.c
